[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hass-consumable-tracker"
dynamic = ["version"]
description = "Home Assistant custom integration for tracking consumable items"
requires-python = ">=3.13.2"

[dependency-groups]
dev = [
    "ruff>=0.9.4",
    "ty>=0.0.8",
    "pytest-homeassistant-custom-component>=0.13.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.consumable_tracker"]

[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["--cov=custom_components.consumable_tracker", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["custom_components/consumable_tracker"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.hatch.version]
path = "custom_components/consumable_tracker/manifest.json"
pattern = "\"version\":\\s*\"(?P<version>[^\"]+)\""

[tool.hatch.build.targets.wheel]
packages = ["custom_components/consumable_tracker"]
